restored JDK8 compatibility by using Arrays.asList instead of List.of in DiffEqn Engine